add: swagger api docs closes #10